update isi website

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dinas Kependudukan dan Pencatatan Sipil</title>
+    <title>Dinas Kependudukan dan Pencatatan Sipil Kabupaten Madiun</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <!-- Script diletakkan di akhir body untuk menghindari getaran saat loading -->
 </head>
 <body>
     <!-- Header -->
@@ -34,12 +33,12 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <h1>Selamat Datang di Situs Resmi Disdukcapil</h1>
-        <p>Memberikan layanan kependudukan dan pencatatan sipil yang prima, profesional, dan terpercaya.</p>
-        <a href="layanan.html" class="btn" title="Lihat Layanan Kami">Cek Layanan Kami</a>
+        <h1>Selamat Datang di Situs Resmi Disdukcapil Madiun</h1>
+        <p>Memberikan layanan kependudukan dan pencatatan sipil yang prima, profesional, dan terpercaya untuk masyarakat Kabupaten Madiun.</p>
+        <a href="layanan.html" class="btn" title="Lihat Layanan Kami">Jelajahi Layanan</a>
     </section>
 
-    <!-- Services Section -->
+    <!-- Layanan Section -->
     <section class="services">
         <h2 class="section-title">Layanan Kami</h2>
         <div class="services-container">
@@ -81,7 +80,36 @@
         </div>
     </section>
 
-    <!-- News Section -->
+    <!-- Data Visualization Section -->
+    <section class="data-visualization-preview">
+        <div class="container">
+            <h2 class="section-title">Visualisasi Data Kependudukan</h2>
+            <div class="data-viz-content">
+                <div class="data-viz-description">
+                    <p>Lihat statistik dan visualisasi data kependudukan terkini secara interaktif. Dapatkan wawasan mendalam tentang demografis wilayah Madiun.</p>
+                    <a href="https://disdukcapil-sistem-visualisasi.streamlit.app/" class="btn" target="_blank" title="Buka Visualisasi Data">
+                        <i class="fas fa-chart-pie"></i> Buka Visualisasi Data
+                    </a>
+                </div>
+                <div class="data-viz-preview">
+                    <div class="preview-chart">
+                        <i class="fas fa-chart-bar"></i>
+                        <h3>Statistik Penduduk</h3>
+                    </div>
+                    <div class="preview-chart">
+                        <i class="fas fa-users"></i>
+                        <h3>Demografi</h3>
+                    </div>
+                    <div class="preview-chart">
+                        <i class="fas fa-chart-pie"></i>
+                        <h3>Analisis Data</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Berita Terkini Section -->
     <section class="news">
         <h2 class="section-title">Berita Terkini</h2>
         <div class="news-container">
@@ -118,7 +146,7 @@
         </div>
     </section>
 
-    <!-- Announcements Section -->
+    <!-- Pengumuman Section -->
     <section class="announcements">
         <div class="container">
             <h2 class="section-title">Pengumuman</h2>
@@ -136,7 +164,7 @@
         </div>
     </section>
 
-    <!-- Gallery Preview -->
+    <!-- Galeri Kegiatan Section -->
     <section class="gallery-preview">
         <div class="container">
             <h2 class="section-title">Galeri Kegiatan</h2>
@@ -172,20 +200,20 @@
         </div>
     </section>
 
-    <!-- Contact Preview -->
+    <!-- Kontak Preview Section -->
     <section class="contact-preview">
         <div class="container">
             <div class="contact-preview-container">
                 <div class="contact-preview-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15821.771967914392!2d111.52118915!3d-7.6293335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e79be822f890b39%3A0x31c818cf52fa97b0!2sKantor%20Dispendukcapil%20Kota%20Madiun!5e0!3m2!1sen!2sid!4v1650000000000!5m2!1sen!2sid" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.4721!2d111.51673!3d-7.63088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwMzcnNDEuMiJTIDExMcKwMzEnMDAuMiJF!5e0!3m2!1sid!2sid!4v1714040221876!5m2!1sid!2sid" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div class="contact-preview-info">
-                    <h2>Kontak Kami</h2>
+                    <h2>Hubungi Kami</h2>
                     <div class="contact-info-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h3>Alamat</h3>
-                            <p>Jl. Contoh No. 123, Kota</p>
+                            <p>Jl. Contoh No. 123, Kota Madiun</p>
                         </div>
                     </div>
                     <div class="contact-info-item">
@@ -259,22 +287,17 @@
         </div>
     </footer>
 
-    <!-- Scroll To Top Button -->
+    <!-- Tombol Scroll ke Atas -->
     <button class="scroll-top-btn" id="scrollToTop" aria-label="Scroll to top">
         <i class="fas fa-arrow-up"></i>
     </button>
 
-    <!-- Scripts di bagian bawah untuk mencegah getaran saat loading -->
+    <!-- Script -->
     <script src="main.js"></script>
     <script>
-        // Menunggu dokumen selesai loading sebelum menjalankan script
         document.addEventListener('DOMContentLoaded', function() {
             // Tambahkan class untuk menandai bahwa halaman sudah dimuat
             document.body.classList.add('page-loaded');
-            
-            // Tab informasi
-            const urlParams = new URLSearchParams(window.location.search);
-            const tabParam = urlParams.get('tab');
             
             // Event listener untuk link ke tab informasi
             const newsLinks = document.querySelectorAll('a[href^="informasi.html?tab="]');
@@ -286,7 +309,7 @@
                 });
             });
 
-            // Membuat gallery item dapat diklik tetapi dengan cara yang lebih aman
+            // Membuat gallery item dapat diklik
             const galleryItems = document.querySelectorAll('.gallery-preview-item');
             galleryItems.forEach(item => {
                 item.addEventListener('click', function() {
@@ -300,7 +323,7 @@
                 item.style.cursor = 'pointer';
             });
 
-            // Scroll to top button
+            // Tombol scroll ke atas
             const scrollToTopButton = document.getElementById('scrollToTop');
             if (scrollToTopButton) {
                 // Sembunyikan tombol saat halaman dimuat
