--- a/kontak.html
+++ b/kontak.html
@@ -115,7 +115,7 @@
             <div class="map-section">
                 <h2>Lokasi Kami</h2>
                 <div class="map-container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15821.771967914392!2d111.52118915!3d-7.6293335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e79be822f890b39%3A0x31c818cf52fa97b0!2sKantor%20Dispendukcapil%20Kota%20Madiun!5e0!3m2!1sen!2sid!4v1650000000000!5m2!1sen!2sid" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.4721!2d111.51673!3d-7.63088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwMzcnNDEuMiJTIDExMcKwMzEnMDAuMiJF!5e0!3m2!1sid!2sid!4v1714040221876!5m2!1sid!2sid" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
