Update index.html dan readme

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="data-viz-content">
                 <div class="data-viz-description">
                     <p>Lihat statistik dan visualisasi data kependudukan terkini secara interaktif. Dapatkan wawasan mendalam tentang demografis wilayah Madiun.</p>
-                    <a href="https://disdukcapil-kabmadiun.streamlit.app/" class="btn" target="_blank" title="Buka Visualisasi Data">
+                    <a href="https://kabmadiun-disdukcapil.streamlit.app/" class="btn" target="_blank" title="Buka Visualisasi Data">
                         <i class="fas fa-chart-pie"></i> Buka Visualisasi Data
                     </a>
                 </div>
