Update index.html dan readme

--- a/layanan.html
+++ b/layanan.html
@@ -21,12 +21,13 @@
         </div>
         <nav class="nav">
             <ul>
-                <li><a href="index.html">Beranda</a></li>
-                <li><a href="profil.html">Profil</a></li>
-                <li><a href="layanan.html" class="active">Layanan</a></li>
-                <li><a href="informasi.html">Informasi</a></li>
-                <li><a href="galeri.html">Galeri</a></li>
-                <li><a href="kontak.html">Kontak</a></li>
+                <li><a href="index.html" class="active" title="Halaman Utama">Beranda</a></li>
+                <li><a href="profil.html" title="Profil Dinas">Profil</a></li>
+                <li><a href="layanan.html" title="Layanan Kami">Layanan</a></li>
+                <li><a href="informasi.html" title="Informasi dan Berita">Informasi</a></li>
+                <li><a href="galeri.html" title="Galeri Foto dan Video">Galeri</a></li>
+                <li><a href="kontak.html" title="Hubungi Kami">Kontak</a></li>
+                <li><a href="visualisasi-data.html" title="Visualisasi">Visualisasi</a></li>
             </ul>
         </nav>
     </header>
