--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <li><a href="informasi.html" title="Informasi dan Berita">Informasi</a></li>
                 <li><a href="galeri.html" title="Galeri Foto dan Video">Galeri</a></li>
                 <li><a href="kontak.html" title="Hubungi Kami">Kontak</a></li>
+                <li><a href="visualisasi-data.html" title="Visualisasi">Visualisasi</a></li>
             </ul>
         </nav>
     </header>
