--- a/kontak.html
+++ b/kontak.html
@@ -26,7 +26,7 @@
                 <li><a href="layanan.html" title="Layanan Kami">Layanan</a></li>
                 <li><a href="informasi.html" title="Informasi dan Berita">Informasi</a></li>
                 <li><a href="galeri.html" title="Galeri Foto dan Video">Galeri</a></li>
-                <li><a href="kontak.html" title="Hubungi Kami">Kontak</a></li>
+                <li><a href="kontak.html" class="active" title="Hubungi Kami">Kontak</a></li>
                 <li><a href="visualisasi-data.html" title="Visualisasi">Visualisasi</a></li>
             </ul>
         </nav>
