--- a/visualisasi-data.html
+++ b/visualisasi-data.html
@@ -83,11 +83,11 @@
             <ul>
                 <li><a href="index.html">Beranda</a></li>
                 <li><a href="profil.html">Profil</a></li>
-                <li><a href="layanan.html" class="active">Layanan</a></li>
+                <li><a href="layanan.html" >Layanan</a></li>
                 <li><a href="informasi.html">Informasi</a></li>
                 <li><a href="galeri.html">Galeri</a></li>
                 <li><a href="kontak.html">Kontak</a></li>
-                <li><a href="visualisasi-data.html">Visualisasi</a></li>
+                <li><a href="visualisasi-data.html" class="active" >Visualisasi</a></li>
             </ul>
         </nav>
     </header>
