Update index.html dan readme

--- a/kontak.html
+++ b/kontak.html
@@ -21,7 +21,7 @@
         </div>
         <nav class="nav">
             <ul>
-                <li><a href="index.html" class="active" title="Halaman Utama">Beranda</a></li>
+                <li><a href="index.html" title="Halaman Utama">Beranda</a></li>
                 <li><a href="profil.html" title="Profil Dinas">Profil</a></li>
                 <li><a href="layanan.html" title="Layanan Kami">Layanan</a></li>
                 <li><a href="informasi.html" title="Informasi dan Berita">Informasi</a></li>
