--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="site-title">DINAS KEPENDUDUKAN DAN PENCATATAN SIPIL KABUPATEN MADIUN</div>
             </div>
             <div class="contact-info">
-                <p>Email: disdukcapil@contoh.go.id | Telp: (0351) 467327</p>
+                <p>Email: disdukcapilmadiun@gmail.com | Telp: (0351) 453395</p>
             </div>
         </div>
         <nav class="nav">
@@ -228,7 +228,7 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h3>Email</h3>
-                            <p>disdukcapil@contoh.go.id</p>
+                            <p>disdukcapilmadiun@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-info-item">
@@ -272,9 +272,9 @@
             </div>
             <div class="footer-col">
                 <h3>Kontak Kami</h3>
-                <p><i class="fas fa-map-marker-alt"></i> Jl. Contoh No. 123, Kota</p>
-                <p><i class="fas fa-phone"></i> (0351) 467327</p>
-                <p><i class="fas fa-envelope"></i> disdukcapil@contoh.go.id</p>
+                <p><i class="fas fa-map-marker-alt"></i> Jl. Aloon-Aloon Utara No.4, Pangongangan, Kec. Manguharjo, Kota Madiun, Jawa Timur 63121</p>
+                <p><i class="fas fa-phone"></i> (0351) 453395</p>
+                <p><i class="fas fa-envelope"></i> disdukcapilmadiun@gmail.com</p>
                 <div class="social-links">
                     <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
@@ -284,7 +284,7 @@
             </div>
         </div>
         <div class="copyright">
-            &copy; 2025 Dinas Kependudukan dan Pencatatan Sipil. Hak Cipta Dilindungi.
+            &copy; 2025 Dinas Kependudukan dan Pencatatan Sipil.
         </div>
     </footer>
 
